initial support for iris face verification
